--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
-    "msw": "^1.2.1",
-    "msw-storybook-addon": "^1.10.0",
+    "chromatic": "^11.1.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-storybook": "^0.6.15",
+    "msw": "^1.2.1",
+    "msw-storybook-addon": "^1.10.0",
     "prop-types": "^15.8.1",
     "storybook": "^7.6.6",
     "vite": "^4.3.2"
