--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "build-storybook": "storybook build",
     "init-msw": "msw init public/",
     "chromatic": "npx chromatic --project-token=chpt_f3effbaa54410c7",
-    "test-storybook": "test-storybook"
+    "test-storybook": "test-storybook",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@storybook/addon-a11y": "^8.0.2",
     "axe-playwright": "^2.0.1",
+    "cypress": "^13.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
