--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "build-storybook": "storybook build",
     "init-msw": "msw init public/",
     "chromatic": "npx chromatic --project-token=chpt_f3effbaa54410c7",
-    
-    "test-storybook": "test-storybook --coverage --coverageDirectory .storybook && nyc report --reporter=text -t coverage/storybook --report-dir .storybook",
+    "test-storybook": "test-storybook",
     "cypress": "cypress open"
   },
   "dependencies": {
@@ -43,7 +42,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-storybook": "^0.6.15",
     "msw": "^1.2.1",
-    "msw-storybook-addon": "^1.10.0",
+    "msw-storybook-addon": "^1.10.0",    
     "prop-types": "^15.8.1",
     "storybook": "^7.6.6",
     "vite": "^4.3.2"
